<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.neverland_ly.biyesheji.SelectActivity"
    android:background="@drawable/back_gradient_1">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_select"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="#6600cc"
        android:gravity="center">
        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal">-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/select_label"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <!--</RelativeLayout>-->
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"

            android:layout_weight="1"
            android:background="@drawable/selector_button_red"
            android:text="@string/select_test1_zhengfansuan"
            android:onClick="test1"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:onClick="test2"
            android:layout_weight="1"
            android:background="@drawable/selector_button_yellow"
            android:text="@string/select_test2_traverse"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:onClick="test3"
            android:layout_weight="1"
            android:background="@drawable/selector_button_purple"
            android:text="@string/select_test3_author"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--<TextView-->
            <!--android:layout_width="1dip"-->
            <!--android:layout_height="match_parent"-->
            <!--android:textColor=""/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:onClick="test4"
            android:layout_weight="1"
            android:background="@drawable/selector_button_green"
            android:text="@string/select_test4_download"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:onClick="test5"
            android:layout_weight="1"
            android:background="@drawable/selector_button_orange"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/select_test5_connect" />


    </LinearLayout>
</LinearLayout>
