<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient_3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.neverland_ly.biyesheji.DownloadActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_select"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#B5B5B5"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/download_label"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:ellipsize="marquee"-->
        <!--android:marqueeRepeatLimit="marquee_forever"-->
        <!--android:singleLine="true"-->
        <!--android:text="@string/download_note"-->
        <!--android:textColor="#EE0000"-->
        <!--android:textSize="30sp"-->
        <!--android:textStyle="bold" />-->
    <!--&lt;!&ndash;android:focusableInTouchMode="true"  &ndash;&gt;-->
    <!--&lt;!&ndash;android:focusable="true"&ndash;&gt;-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="3"
            android:src="@drawable/apk" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_yellow"
            android:onClick="download1"
            android:text="@string/download_button1"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="3"
            android:src="@drawable/excel" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_green"
            android:onClick="download2"
            android:text="@string/download_button2"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="3"
            android:src="@drawable/vs" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_purple"
            android:onClick="download3"
            android:text="@string/download_button3"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>

