<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textColor="#FCFCFC"
            android:textSize="20sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/rotate"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_blue"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <!--<TextView-->
            <!--android:id="@+id/tv"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toRightOf="@+id/rotate"-->
           <!--android:layout_alignBottom="@+id/rotate"-->
            <!--android:text="Beta"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="20sp"-->
            <!--android:textColor="#000000"/>-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:background="@null"
                android:hint="@string/login_hint_username"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textColorHint="#A3A3A3"
                android:textSize="30sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:src="@drawable/password" />

            <EditText

                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:background="@null"
                android:hint="@string/login_hint_password"
                android:inputType="numberPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textColorHint="#A3A3A3"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="注册账户"
            android:textColor="#90000000"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="40dp"
            android:gravity="right"
            android:onClick="sign_up"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/selector_button_purple"
            android:onClick="login"
            android:text="@string/login_login"
            android:textColor="#FCFCFC"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:text="@string/login_copyright"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="theft"/>

    </LinearLayout>


</LinearLayout>


